tests/baselines/reference/nonTsxExtensionSelfClosingTagMultiline.errors.txt
nonTsxExtensionSelfClosingTagMultiline.ts(2,24): error TS1465: JSX tags are not permitted in '.ts' files. Did you mean for the file extension to be '.tsx'?
nonTsxExtensionSelfClosingTagMultiline.ts(2,25): error TS2304: Cannot find name 'span'.


==== nonTsxExtensionSelfClosingTagMultiline.ts (2 errors) ====
    console.log("before");
    export const _ = () => <span
                           ~~~~~
                            ~~~~
!!! error TS2304: Cannot find name 'span'.
    />;
    ~~
!!! error TS1465: JSX tags are not permitted in '.ts' files. Did you mean for the file extension to be '.tsx'?
    console.log("after");
    